--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,9 @@
 # User config
-author: "Pineapple"
-tagline: "Pineapple Certfied Jekyll Theme"
-description: "In 1493, explorer Christopher Columbus found pineapples on Guadeloupe Island in the Caribbean. Pineapple on pizza soon followed..."
-keywords: "Pineapple, Pineapple Pizza, Pineapple House"
-email: "pineapple@example.com"
-linkedin: "https://www.linkedin.com/"
-twitter: "https://twitter.com/"
-github: "https://github.com/"
+# url: "https://nycscavengerhunt.github.io/"
+author: "ScavengerHunt"
+tagline: "Scavenger Hunt in NYC for Margaret's Birthday"
+description: "Follow the clus and reach the prize!"
+keywords: "scavenger hunt nyc birthday party"
 
 # Site config
 baseurl: ""
