--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # User config
-# url: "https://nycscavengerhunt.github.io/"
+# url: ""
 author: "ScavengerHunt"
 tagline: "Scavenger Hunt in NYC for Margaret's Birthday"
 description: "Follow the clus and reach the prize!"
